--- a/TODO
+++ b/TODO
@@ -4,11 +4,10 @@
    * smaller heatshrink
 
  * Bring up imu junction board
+   * install replacement regulators
    * test power
-   * figure out why I get resynchs when using bridge
 
  * bring up pi3 hat board
-   * test power
    * write minimal bridge fw for pi3 hat
    * test attached to pi3
 
@@ -19,6 +18,7 @@
 
  * Design and build battery tray
  * Design and build outer shell
+ * Design plastic cover for control boards in 6008 configuration
 
  * switch battery to something with integrated protection, like from a
    power tool
@@ -47,11 +47,25 @@
  * Figure out why -O2 and -O3 start linking in assert
  * Get all mbed ticker stuff out of the link, we never want it used
 
+ * design and build controller automated test fixture
+
 
 Code cleanup
  * Make StaticFunction not so expensive to call
  * Try to figure out a way so that we can actually bind callbacks without
    having to shrink all over the place?
+
+DONE 2019-03-08
+ * imu_junction
+   * diagnosed errors with resynchronizations
+   * the stm32 serial driver was taking too long to release the
+     direction bit, causing a master collision between it and the
+     servo.  Switched direction bit to be turned off in the ISR to get
+     more consistent timing. Scope shows there is still plenty of
+     margin (i.e. it isn't being turned off too soon).
+ * pi3_hat
+   * got power working, after adding a 100k pullup to regulator EN
+     line... powered rpi3
 
 DONE 2019-03-07
  * imu_junction
